# haliax-dm-model

./: Cargo.toml  README.md
notebooks/: Untitled.ipynb
src/: boltzmann.rs  kinetic_mixing.rs  lib.rs  standard_dm_model.rs
src/kinetic_mixing/: boltzmann.rs  cross_sections.rs  thermal_cross_section.rs  widths.rs
